# bitfighter

./: .gitignore  .hgeol  .snapcraft.yaml  .travis.yml  BitFighter_sam.sln  Bitfighter.sln  CMakeLists.txt  End-User License.txt  LICENSE.txt  Makefile  README.md  README.txt  ReadMe.html  ZAP.sln  config.h  cwPrefixWin32.h  delme.py  luadoc.pl  luadoc.py  travis-install-dependencies.sh
Triangle/: triangle.c  triangle.h  tricall.c
alure/: CMakeLists.txt  Makefile  alure.cpp  codec_aiff.cpp  codec_dumb.cpp  codec_fluidsynth.cpp  codec_modplug.cpp  codec_mpg123.cpp  codec_sndfile.cpp  codec_vorbisfile.cpp  codec_wav.cpp  config.h  libalure.map  main.h  mpg123.h  stream.cpp  streamplay.cpp
alure/AL/: alure.h
alure/include/: main.h
alure/src/: codec_flac.cpp
bitfighter_test/: EventKeyDefs.h  HttpRequestTest.cpp  LevelFilesForTesting.cpp  LevelFilesForTesting.h  LevelLoaderTest.cpp  MockAddress.h  MockSocket.h  PolylineGeometryTest.cpp  RobotTest.cpp  ServerGameTest.cpp  SpawnDelayTest.cpp  TestColor.cpp  TestDatabase.cpp  TestEditor.cpp  TestFileList.cpp  TestGame.cpp  TestGameType.cpp  TestGameUserInterface.cpp  TestGeomUtils.cpp  TestHelpItemManager.cpp  TestHttpRequest.cpp  TestINISettings.cpp  TestInputCode.cpp  TestIntegration.cpp  TestLevelInfoDatabase.cpp  TestLevelLoader.cpp  (+28 more)
libtomcrypt/: Android.mk  CMakeLists.txt  Info.plist  ecc.c  keyring.c  libtomcrypt.vcproj  libtomcrypt.vcxproj  libtomcrypt_Prefix.pch  makefile  mpi.c  mycrypt.h  mycrypt_custom.h  rc2.c  safer.c  tiger.c  yarrow.c
libtomcrypt/English.lproj/: InfoPlist.strings
libtomcrypt/libtomcrypt.xcodeproj/: project.pbxproj  ryan.mode1v3  ryan.pbxuser
lua/lua-vec/: CMakeLists.txt  COPYRIGHT  HISTORY  TODO  lua-vec.vcproj  lua-vec.vcxproj
lua/lua-vec/src/: Android.mk  Makefile  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  ldebug.c  ldo.c  lgc.c  lgcveclib.c  linit.c  llex.c  lobject.h  lstate.h  ltm.c  lua.h  luac.c  luaconf.h  lualib.h  luavec_Prefix.pch  lveclib.c  lvm.c
lua/lua-vec/test/: smallpt.lua
lua/luajit/: CMakeLists.txt
lua/luajit/src/: buildvm.exp  buildvm.lib  lj_arch.h  lj_err.c  luajit.exp  luajit.lib  minilua.exp  minilua.lib  msvcbuild.bat
lua/luajit/src/host/: buildvm.c
master/: CMakeLists.txt  DatabaseAccessThread.h  EasterEgg.cpp  EasterEgg.h  GameConnectRequest.h  GameJoltConnector.cpp  GameJoltConnector.h  Makefile  Master Server.vcproj  MasterServerConnection.cpp  MasterServerConnection.h  authenticator.cpp  authenticator.h  bitfight_master.vcproj  bitfighter_master.vcproj  bitfighter_master_mysql.vcproj  config.cpp  database.cpp  database.h  gameStats.cpp  gameStats.h  main.cpp  master.cpp  master.h  master.vcxproj  masterInterface.cpp  masterInterface.h  notes.txt  phpbbhash.cpp  phpbbhash.h
master/master support files and scripts/: checkmaster  master.cfg  master.ini  motd  restartmaster  startmaster  update_gamejolt_trophies.pl
master/schema/: bitfighter.innoDB.sql  bitfighter.sql  bitfighter.sqlite.sql  bitfighter.sqlite3.sql  sanitize_innodb.sh
mysql++/: CMakeLists.txt  Makefile  common.h  mysql++.vcproj  mysqlpp_gcc.patch  refcounted.h
tnl/: Android.mk  CMakeLists.txt  Info.plist  Makefile  TNL Library.sln  assert.cpp  asymmetricKey.cpp  bitStream.cpp  byteBuffer.cpp  certificate.cpp  clientPuzzle.cpp  connectionStringTable.cpp  dataChunker.cpp  eventConnection.cpp  ghostConnection.cpp  huffmanStringProcessor.cpp  journal.cpp  log.cpp  netBase.cpp  netConnection.cpp  netInterface.cpp  netObject.cpp  netStringTable.cpp  platform.cpp  random.cpp  rpc.cpp  symmetricCipher.cpp  thread.cpp  tnl.changelog.txt  tnl.h  tnl.overview.txt  tnl.vcproj  tnl.vcxproj  tnlAlloc.h  tnlAssert.h  tnlAsymmetricKey.h  tnlBitSet.h  tnlBitStream.h  tnlByteBuffer.h  tnlCertificate.h  (+30 more)
tnl/English.lproj/: InfoPlist.strings
tnl/docs/: doco.css  doxygen.html.cfg  header.html  tree_footer.html
tnl/tnl.xcodeproj/: project.pbxproj  ryan.mode1v3  ryan.pbxuser
tnlping/: CMakeLists.txt  Makefile  check_bitfighter_server_status.sh  tnlping.cpp
tomcrypt/: CMakeLists.txt
tomcrypt/src/ciphers/aes/: aes.c  aes_enc.c  aes_tab.c
tomcrypt/src/ciphers/twofish/: twofish_tab.c
tomcrypt/src/hashes/sha2/: sha224.c  sha384.c
tomcrypt/src/hashes/whirl/: whirltab.c
tomcrypt/src/pk/asn1/der/sequence/: der_length_sequence.c
tomcrypt/src/prngs/: sober128tab.c
updater/: CMakeLists.txt  readme.txt
updater/lib/: libcurl.lib
updater/lib/win64/: libcurl.lib
updater/resource/: gup.xml  nativeLang.xml
updater/src/: bfup.exe.manifest  gup.exe.manifest  gup.rc  gup.xml  resource.h  winmain.cpp  xmlTools.cpp  xmlTools.h
updater/src/ConfigFiles/: bfup.xml  bfupOptions.xml  getDownloadUrl.php  gupReponseExample.xml  nativeLang.xml
updater/vcproj/: BFUP.sln  BFUP.vcproj  BFUP.vcxproj  BFUP.vcxproj.filters  no_MS_shit.props
updater/vcproj/Debug/: CL.read.1.tlog  CL.write.1.tlog  GUP.lastbuildstate  cl.command.1.tlog  vc100.idb
updater/vcproj/Release/: BFUP.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  GUP.lastbuildstate  cl.command.1.tlog  gup.res  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
zap/: AToBScroller.cpp  AToBScroller.h  AnchorPoint.h  AppIntegrator.cpp  AppIntegrator.h  Asteroid.h  BanList.cpp  BanList.h  BfObject.cpp  BfObject.h  Bitfighter-Info.plist  Bitfighter_Prefix.pch  Bitfighterd-Info.plist  BotNavMeshZone.cpp  BotNavMeshZone.h  CMakeLists.txt  CTFGame.cpp  CTFGame.h  ChatCheck.cpp  ChatCheck.h  ChatCommands.cpp  ChatCommands.h  ChatHelper.cpp  ChatHelper.h  ChatMessageDisplayer.cpp  ChatMessageDisplayer.h  ClientGame.cpp  ClientGame.h  ClientInfo.cpp  ClientInfo.h  Color.cpp  Color.h  Colors.cpp  Colors.h  ConfigEnum.h  ConnectionStatsRenderer.cpp  ConnectionStatsRenderer.h  Console.cpp  Console.h  ConsoleFont.c  (+493 more)
zap/Bitfighter.xcodeproj/: geeko.mode1v3  geeko.pbxuser  project.pbxproj  ryan.mode1v3  ryan.pbxuser
zap/English.lproj/: InfoPlist.strings
zap/build_tools/: process_files.rb
zap/win_include_do_not_distribute/: readme.txt
(+431 files in other folders)
